# ai_google_blog

./: .env.example  .gcloudignore  .gitattributes  .gitignore  CLAUDE.md  CLEANUP_PLAN.md  Dockerfile  Makefile  README.md  README_WORKFLOW.md  blogspot_adsense_monetization_master_guide.md  blogspot_ai_blog_master_guide.md  entrypoint.sh  pyproject.toml  requirements.txt
ai_blog_automation/: 01_PREP_CHECKLIST.md  02_AI_CONTENT_STRATEGY_LOCK.md  03_CLONE_MIGRATION_PLAN.md  04_ENV_SECRETS_AND_OPERATIONS.md  05_SEED_TOPICS_AND_EDITORIAL_PROMPTS.md  README.md  ai_blog_codex_cli_start_prompt.md
config/: monetization_topic_sources.json  topic_sources.json
data/: naver_ai_rewritten.json  publish_history.example.json  publish_history.json  tools_database.json
docs/: ARCHITECTURE.md  AUTOMATION_ENGINE_STRUCTURE.md  CONFIG_SPEC.md  CONTENT_STRATEGY_LOCK.md  DEPLOYMENT_GUIDE.md  GOLDEN_ARTICLE_EXAMPLES.md  INDEXABILITY_RUNBOOK.md  NEWS_EXTERNAL_SEARCH_STACK.md  NEWS_RECOMMENDATION_POLICY.md  PRD.md  PRD_CONTENT_ENGINE_V2.md  PROJECT_STRUCTURE.md  QUALITY_REVIEW_PROMPT.md  RUNBOOK.md  TASK_LIST.md  TECH_SPEC.md  TEST_PLAN.md  TOPIC_CLUSTER_MAP.md  YOMI_BLOG_ASSET_PLAYBOOK.md  blogger_theme_styles.css
golden_samples/: ai_work_time_savings.md  patterns.json  tax_refund_hometax_check.md  viral_ott_reaction_decode.md
prompts/: google_blogspot_prompt_v1_3.md
scripts/: analyze_published_post_structure.py  audit_ai_blog_live.py  check_published_today.py  cloud_run_pipeline.sh  create_about_page.py  create_english_static_pages.py  create_policy_pages.py  delete_blog_posts.py  (+9 more)
(+244 files in other folders)
